--- a/code/数据驱动/6.Zx_Vue.html
+++ b/code/数据驱动/6.Zx_Vue.html
@@ -9,6 +9,49 @@
 
 <body>
     <script>
+        // 虚拟 DOM 构造函数
+        class VNode {
+            constructor(tag, data, value, type) {
+                this.tag = tag && tag.toLowerCase()
+                this.data = data
+                this.value = value
+                this.type = type
+                this.children = []
+            }
+
+            appendChild(vnode) {
+                this.children.push(vnode)
+            }
+        }
+
+        // 由 HTML DOM => VNode：将这个函数当作 compiler 函数
+        function getVNode(node) {
+            let nodeType = node.nodeType;
+            let _vnode = null;
+            if (nodeType === 1) {
+                // 元素
+                let nodeName = node.nodeName;
+                let attrs = node.attributes; // attrs 是一个伪数组
+                let _attrObj = {};
+                for (let i = 0; i < attrs.length; i++) { // attrs[i] 属性节点 （nodeType = 2）
+                    _attrObj[attrs[i].nodeName] = attrs[i].nodeValue;
+                }
+                _vnode = new VNode(nodeName, _attrObj, undefined, nodeType)
+
+                // 考虑 node 的子元素
+                let childNodes = node.childNodes;
+                for (let i = 0; i < childNodes.length; i++) {
+                    _vnode.appendChild(getVNode(childNodes[i])); // 递归
+                }
+
+            } else if (nodeType === 3) {
+                // 文本
+                _vnode = new VNode(undefined, undefined, node.nodeValue, nodeType);
+
+            }
+
+            return _vnode;
+        }
 
         function Zx_Vue(options) {
             this._data = options.data
@@ -44,6 +87,8 @@
 
         // 这里是生成 render 函数，目的是缓存 抽象语法树（我们使用虚拟 DOM 来模拟）
         Zx_Vue.prototype.createRenderFn = function () {
+            debugger
+            let ast = getVNode(this._template)
 
             // vue: 将 AST + data => VNode
             // 简化：带坑的 VNode + data => 含有数据的 VNode
